2008-08-18  Neil Roberts  <neil@o-hand.com>

	Bug 1085 - Cursor is in wrong position on ClutterEntry if set
	x-align property

	* clutter/clutter-entry.c (clutter_entry_paint): When calculating
	the position to draw the cursor at, take into account the
	alignment of the text. Queue a redraw when the x-align property is
	changed.

2008-08-07  Neil Roberts  <neil@o-hand.com>

	Bug 1091 - WM_MOUSEWHEEL (scroll-event) not handled correctlly

	* clutter/win32/clutter-event-win32.c (message_translate): The
	coordinates in a WM_MOUSEWEEL message are given relative to the
	screen so they need to be converted to client coordinates before
	use. Thanks to Roman Yazmin.

2008-08-06  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-child-meta.c:
	(clutter_child_meta_set_property),
	(clutter_child_meta_class_init): Make the :container and
	:actor properties of ChildMeta construct-only, to allow
	bindings to actually use ChildMeta without abusing the API.

	* clutter/clutter-container.c (create_child_meta): Instead of
	setting the members of the ChildMeta structure, use the
	constructor properties.

2008-08-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-keysyms.h: Resync with keysymdef.h inside Xorg.

2008-08-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script.c:
	(clutter_script_default_connect): Improve wording and debug
	messages in the default autoconnection for signal handlers.

2008-08-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script-parser.c:
	* clutter/clutter-script-private.h: Clean up the code; add a
	conversion function for reading a ClutterColor out of a
	JSON object or array definition.

	* clutter/clutter-script.c: Clean up the code; document properly
	how we translate from type name to type function.

2008-08-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-main.c: Rework and improve the documentation
	of the thread-safe timeout and idle source installer functions.
